# mcp-docker-manager

./: .gitignore  README.md  makefile  pyproject.toml
src/: config.py  server.py
src/infra/: docker_client.py
tests/integrations/: test_tools.py
